--- a/gotjokes/src/App.css
+++ b/gotjokes/src/App.css
@@ -1,3 +1,37 @@
+/* css reset */
+
+html {
+  box-sizing: border-box;
+  font-size: 16px;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+  margin: 0;
+  padding: 0;
+  font-weight: normal;
+}
+
+ol, ul {
+  list-style: none;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+/* -------------------------------------------------------------- */
+
+*{
+  background-color: black;
+  color: white;
+  font-family: helvetica;
+}
+
 .App {
   text-align: center;
 }
@@ -20,6 +54,22 @@
 
 .App-intro {
   font-size: large;
+}
+
+.page {
+  background-color: black;
+  color: white;
+  text-align: center;
+  padding: 20em;
+}
+
+.textStuff li, .textStuff {
+  padding: 20px;
+
+}
+
+.textStuff li:hover{
+  color:blue;
 }
 
 @keyframes App-logo-spin {
