made it way better

--- a/gotjokes/src/App.css
+++ b/gotjokes/src/App.css
@@ -72,6 +72,17 @@ img {
   color:blue;
 }
 
+/* ------------------------------------------- */
+
+#jokes li{
+  padding: 10px;
+}
+.alljokes{
+  padding: 15px;
+  margin: 20px;
+}
+
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
