--- a/gotjokes/src/css/singleJoke.css
+++ b/gotjokes/src/css/singleJoke.css
@@ -1,19 +1,42 @@
+
+
 #red {
   color: white;
   border: 1px solid white;
 }
 
-#jokes li{
+.jokes li{
   font-size: 50px;
+  padding-bottom: 2rem;
 }
 
 .jokeDisplay{
   padding-bottom: 300px;
 }
 
+#active{
+  background-color: black;
+animation-name: laser;
+animation-duration: 0.1s;
+animation-timing-function: linear;
+animation-iteration-count: infinite;
+animation-direction: alternate;
+animation-play-state: running;
+  }
+
+  #active li{
+    display: none;
+  }
+
+  @keyframes laser {
+    from {background-color: black;}
+    to {background-color: red;}
+}
+
+
 .flash:hover {
    animation-name: flash;
-    animation-duration: 0.05s;
+    animation-duration: 0.2s;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
     animation-direction: alternate;
@@ -22,5 +45,50 @@
 
 @keyframes flash {
     from {color: white;}
-    to {color: yellow;}
+    to {color: blue;}
+}
+
+h1.inactive{
+display:none;
+}
+
+h1.active{
+  font-size: 10em;
+  padding-top: 1em;
+}
+
+
+img.off{
+display: none ;
+margin: 0 15px;
+height: 20px;
+width: 20px;
+}
+
+img.arrowOn{
+  display: inline;
+  margin: 0 15px;
+  height: 20px;
+  width: 20px;
+  -webkit-filter: invert(100%);
+}
+
+#arrow1 {
+transform: rotate(.2turn);
+}
+
+#arrow2 {
+transform: rotate(.15turn);
+}
+
+#arrow3 {
+transform: rotate(.12turn);
+}
+
+#arrow4 {
+transform: rotate(.10turn);
+}
+
+#arrow5 {
+transform: rotate(.02turn);
 }
