--- a/gotjokes/src/css/singleJoke.css
+++ b/gotjokes/src/css/singleJoke.css
@@ -15,7 +15,7 @@
 }
 
 #active{
-  background-color: black;
+  background-color: #04c2f2;
 animation-name: laser;
 animation-duration: 0.1s;
 animation-timing-function: linear;
@@ -29,7 +29,7 @@ animation-play-state: running;
   }
 
   @keyframes laser {
-    from {background-color: black;}
+    from {background-color: #04c2f2;}
     to {background-color: red;}
 }
 
