--- a/src/css/PaperSheet.css
+++ b/src/css/PaperSheet.css
@@ -1,6 +1,6 @@
 .wynJokeContainer2{
   padding: 0;
-  padding-top: 200px;
+  padding-top: 9rem;
   list-style: none;
   display: flex;
   justify-content: center;
@@ -8,14 +8,14 @@
 }
 
 #donkey{
-  width: 400px;
+  width: 75%;
   height: 200px;
   margin: 0 auto;
 }
 
 #creditText{
   text-align: left;
-  width: 200px;
+  width: 100%;
   font-size: 20px;
   padding: 10px;
   font-family: helvetica;
