--- a/src/dardo-components/css/Dogs.css
+++ b/src/dardo-components/css/Dogs.css
@@ -1,22 +1,45 @@
 .doggo {
-border: 10px solid white;
-margin: 40px;
+border: 6px solid white;
+height: 90%;
+width: auto;
+margin: 15px 15px ;
+border-radius: 10px;
+background-color: black;
+
+
+
+}
+.doggo img{
+    object-fit: contain;
+    height: 100%;
+}
+
+.doggo video{
+    object-fit: contain;
+    height: 100%;
 
 }
 
 .textStuff {
-    display: flex ;
+    
     justify-content: center;
     background-color: burlywood;
+    border-radius: 25px;
+    border: 3px solid coral;
+    max-width: 1000px;
+    min-width: 50%;
+    height: 600px;
 }
 .dogbutton {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-style: bold;
+
     color: white;
-    border: 5px solid white;
-    margin: 40px 40px;
-    white-space: normal;
-    word-wrap: break-word;
+    height: 50px;
+    width: 100px;
+    border: 3px solid white;
+   
     background-color: darkorange;
+    border-radius: 5px;
+  
 
 }
