--- a/src/dardo-components/css/dardoapp.css
+++ b/src/dardo-components/css/dardoapp.css
@@ -17,13 +17,12 @@
   color: white;
 }
 
-.App-title {
-  font-size: 4vw;
+.dogApp-title {
+  font-size: 3vw;
   text-align: center;
   font-weight: bold;
-  padding: 20px;
-
-  margin: 30px 400px;
+  padding: 30px 40px;
+  margin: 10px 350px;
   color: white;
   background: rgba(237, 109, 82, 1);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -31,4 +30,25 @@
 
 .App-intro {
   font-size: large;
+}
+@-webkit-keyframes scroll {
+  0% {
+    -webkit-transform: translate(100%, 0);
+  }
+  100% {
+    -webkit-transform: translate(-100%, 0);
+  }
+}
+
+.marquee {
+  margin: 10px 5px;
+display: block;
+width: 100%;
+white-space:nowrap;
+overflow: hidden;
+}
+.marqueespan {
+  display:inline-block;
+  padding-left: 100;
+  -webkit-animation: scroll 7s infinite linear;
 }
