--- a/src/dardo-components/css/dardoapp.css
+++ b/src/dardo-components/css/dardoapp.css
@@ -1,4 +1,3 @@
-
 .App {
   text-align: center;
 }
@@ -15,14 +14,18 @@
   height: 150px;
   padding: 20px;
   color: white;
+
 }
+
 
 .dogApp-title {
   font-size: 3vw;
+  display: inline-block;
   text-align: center;
   font-weight: bold;
-  padding: 30px 40px;
-  margin: 10px 350px;
+  border-radius: 4px;
+  padding: 30px 48px;
+  margin: 10px 250px;
   color: white;
   background: rgba(237, 109, 82, 1);
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -31,24 +34,30 @@
 .App-intro {
   font-size: large;
 }
-@-webkit-keyframes scroll {
+
+@keyframes scroll {
   0% {
-    -webkit-transform: translate(100%, 0);
+    transform: translate(100%, 0);
   }
   100% {
-    -webkit-transform: translate(-100%, 0);
+    transform: translate(-100%, 0);
   }
 }
 
+
 .marquee {
-  margin: 10px 5px;
-display: block;
-width: 100%;
-white-space:nowrap;
-overflow: hidden;
+  margin: 10px 10px;
+  display: inline-block;
+  width: 100%;
+  white-space:nowrap;
+  overflow: hidden;
 }
 .marqueespan {
   display:inline-block;
-  padding-left: 100;
-  -webkit-animation: scroll 7s infinite linear;
+  padding-left: 100%;
+  animation: scroll 25s infinite linear;
+}
+
+.minidog2 {
+  transform: scalex(-1);
 }
