Updates to the whole file

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -50,7 +50,9 @@ a {
   background: rgba(237, 109, 82, 1);
 
 }
-
+.smileyFront {
+  margin: 50px ;
+}
 #browserDiv{
 text-align: center;
 order: 3;
