--- a/src/dardo-components/css/dardoapp.css
+++ b/src/dardo-components/css/dardoapp.css
@@ -25,9 +25,9 @@
   font-weight: bold;
   border-radius: 4px;
   padding: 30px 48px;
-  margin: 10px 250px;
+  margin: 10px 50px;
   color: white;
-  background: rgba(237, 109, 82, 1);
+  background: tomato;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
@@ -60,4 +60,13 @@
 
 .minidog2 {
   transform: scalex(-1);
+}
+
+@media screen and (max-width: 375px) {
+  .dogApp-title {
+  display: inline-block;
+  margin: 5px 25px;
+  padding: 15px 24px;
+  
+  }
 }
